--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,5 @@
 [core]
-    remote = local_remote
-['remote "local_remote"']
-    url = F:\Maestria\MLOps\LocalStorage
+    autostage = true
+    remote = storage
+['remote "storage"']
+    url = http://localhost:5000
